--- a/github/gituse/20190831-git使用指南.md
+++ b/github/gituse/20190831-git使用指南.md
@@ -7,11 +7,12 @@ categories:
 - gitlearn  
 ---
 
-![git思维导图](/images/git.png)
+![git思维导图](/gituse/git.png)
 
 #  git
 ## git常用命令
-![git快捷键](/images/git快捷键.png)
+<img src="https://github.com/Florian-Gao/images/blob/master/git快捷键.png" alt="git快捷键">
+
 ## git简介
 ···
 	工作区/Working Directory 
