--- a/github/gituse/20190831-git使用指南.md
+++ b/github/gituse/20190831-git使用指南.md
@@ -7,7 +7,7 @@ categories:
 - gitlearn  
 ---
 
-![git思维导图](/gituse/git.png)
+<img src="https://github.com/Florian-Gao/images/blob/master/git.png" alt="git思维导图">)
 
 #  git
 ## git常用命令
