common git commit

--- a/learn_data_analysis/python_0_1 .ipynb
+++ b/learn_data_analysis/python_0_1 .ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# stage0\n",
-    "## day1"
+    "## day1 and day2"
    ]
   },
   {
@@ -214,43 +214,7 @@
       "0b1101111000\n",
       "0o1570\n",
       "0x378\n",
-      "47 y+5\n",
-      "<class 'bool'>\n",
-      "6\n",
-      "6\n",
-      "0.25 <class 'float'>\n",
-      "0.3333333333333333\n",
-      "3.3333333333333335\n",
-      "0.1\n",
-      "0.30000000000000004\n",
-      "<class 'complex'>\n",
-      "1.0\n",
-      "2.0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1.0\n",
-      "0.0\n",
-      "False bool的默认值\n",
-      "True\n",
-      "False\n",
-      "True\n",
-      "False\n",
-      "(1+0j)\n",
-      "(2+0j)\n",
-      "4\n",
-      "1\n",
-      "2.0\n",
-      "1.0\n",
-      "(2+0j)\n",
-      "(4.1+0j)\n",
-      "(1+0j)\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "<class 'complex'>\n",
-      "<class 'float'>\n"
+      "47 y+5\n"
      ]
     }
    ],
@@ -343,7 +307,30 @@
     "# print(oct(x)+5)\n",
     "\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "6\n",
+      "6\n",
+      "0.25 <class 'float'>\n",
+      "0.3333333333333333\n",
+      "3.3333333333333335\n",
+      "0.1\n",
+      "0.30000000000000004\n"
+     ]
+    }
+   ],
+   "source": [
     "# 二、布尔类型  bool\n",
     "# 布尔类型是整数类型的子类型\n",
     "# True---1  False----0（注意大小写）\n",
@@ -374,7 +361,50 @@
     "print(0.1+0.2)\n",
     "\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n",
+      "1.0\n",
+      "2.0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "1.0\n",
+      "0.0\n",
+      "False bool的默认值\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "(1+0j)\n",
+      "(2+0j)\n",
+      "4\n",
+      "1\n",
+      "2.0\n",
+      "1.0\n",
+      "(2+0j)\n",
+      "(4.1+0j)\n",
+      "(1+0j)\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "<class 'complex'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
     "# 四、复数  complex\n",
     "#1+2i\n",
     "x=1+2j\n",
@@ -432,6 +462,13 @@
     "print(type(i+c))\n",
     "print(type(i+f))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
