--- a/learn_data_analysis/python_0_3.ipynb
+++ b/learn_data_analysis/python_0_3.ipynb
@@ -389,9 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, ['new', 4])\n"
+     ]
+    }
+   ],
    "source": [
     "#元组的元素不能被修改：如果元素是不可变类型，就不能改，如果是可变类型，那么可以修改\n",
     "# 可变类型内部的元素\n",
@@ -400,6 +408,394 @@
     "t1[2][0]=\"new\"\n",
     "print(t1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=a[:1]+(\"new\",)+a[2:]  #拼接要加逗号"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Google\n",
+      "Microsoft\n",
+      "Java\n",
+      "Python\n",
+      "Ruby\n",
+      "PHP\n",
+      "Adam\n",
+      "Bart\n",
+      "Lisa\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [\n",
+    "    ['Apple', 'Google', 'Microsoft'],\n",
+    "    ['Java', 'Python', 'Ruby', 'PHP'],\n",
+    "    ['Adam', 'Bart', 'Lisa']\n",
+    "    ]\n",
+    "# print(L[1][0])\n",
+    "for i  in L:\n",
+    "    #print(i)\n",
+    "    for j in i:\n",
+    "        print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "输入年 100\n",
+      "输入月 12\n",
+      "输入日 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "335\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 输入某年某月某日，判断这一天是这一年的第几天？\n",
+    "# 程序分析：以3月5日为例，应该先把前两个月的加起来，\n",
+    "# 然后再加上5天即本年的第几天，特殊情况，闰年且输入月份大于2时需考虑多加一天：\n",
+    "def que3():\n",
+    "    year=int(input(\"输入年\"))\n",
+    "    month=int(input(\"输入月\"))\n",
+    "    day=int(input(\"输入日\"))\n",
+    "    months=[0,31,28,31,30,31,30,31,31,30,31,30,31]\n",
+    "    sums=0\n",
+    "    if 0<month<=12:\n",
+    "        for i in range(month):\n",
+    "            sums+=months[i]\n",
+    "        sums+=day\n",
+    "\n",
+    "    # 闰年\n",
+    "    # if year%400 or year%4==0 and year%100!=0:\n",
+    "    if month>2 and year%4==0 and year%100!=0 or year%400==0:\n",
+    "        sums+=1\n",
+    "    print(sums)\n",
+    "que3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "请输入每位是什么： 2\n",
+      "请输入最大的数字是多少位: 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "2\n",
+      "22\n",
+      "3\n",
+      "222\n",
+      "[2, 22, 222]\n",
+      "246\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7.\n",
+    "# 题目：求s = a + aa + aaa + aaaa + aa...a的值\n",
+    "# 其中a是一个数字。例如2 + 22 + 222 + 2222 + 22222\n",
+    "# (此时共有5个数相加)，几个数相加由键盘控制。\n",
+    "def que7():\n",
+    "    a=input(\"请输入每位是什么：\")\n",
+    "    n=int(input(\"请输入最大的数字是多少位:\"))\n",
+    "    L=[]\n",
+    "    for i in range(1,n+1):\n",
+    "        print(i)\n",
+    "        num=int(a*i) #注意这里a，i是字符串，而不是数字\n",
+    "        print(num)\n",
+    "        L.append(num)\n",
+    "    print(L)\n",
+    "    s=0\n",
+    "    for j in L:\n",
+    "       s+=j\n",
+    "    print(s)\n",
+    "que7()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(2*2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 字典"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'tom': 90, 'jerry': 60, 'kate': 50} <class 'dict'>\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "s={\"tom\":90,\"jerry\":60,\"kate\":50}\n",
+    "print(s,type(s))\n",
+    "\n",
+    "# 字典查询速度快：字典的key会使用hash函数映射成一个hashcode（整数），hashcode指向的是值的地址。\n",
+    "# 字典的特点\n",
+    "#（1）字典中的键值对是无序存储\n",
+    "#（2）字典中的key必须是不可变类型 \n",
+    "# 在字典中key要求是不可变类型（字符串、数值、元组（所有元素必须是不可变类型））\n",
+    "#（3）字典中的key不能重复\n",
+    "\n",
+    "# 字典的key和value的访问\n",
+    "# 格式: 字典名[key]\n",
+    "print(s[\"tom\"])\n",
+    "\n",
+    "# 2. 字典的操作： 运算符\n",
+    "# 不支持+ * >  <\n",
+    "# print(s+{\"lucky\":88})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "4361489216 4361129632\n",
+      "4301762752 4301762752\n"
+     ]
+    }
+   ],
+   "source": [
+    "# is  ==\n",
+    "s1={\"tom\":90,\"jerry\":60,\"kate\":50}\n",
+    "s2={\"tom\":90,\"jerry\":60,\"kate\":50}\n",
+    "print(s1==s2)\n",
+    "print(s1 is s2)\n",
+    "print(id(s1),id(s2))\n",
+    "print(id(s1[\"tom\"]),id(s2[\"tom\"]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in  not in : key是否存在在字典中。\n",
+    "print(\"tom\" in s1)\n",
+    "#print(90 in s1) 不能直接判断value在不在字典中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "{1: None, 2: None, 3: None}\n",
+      "{1: 'number', 2: 'number', 3: 'number'}\n",
+      "{1: ('one', 'two', 'three'), 2: ('one', 'two', 'three'), 3: ('one', 'two', 'three')}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. 字典相关方法\n",
+    "# （1）创建类别\n",
+    "# fromkeys：使用序列中的每一个元素作为key生成字典,value使用统一的值\n",
+    "d={}\n",
+    "print(type(d))\n",
+    "print(d.fromkeys((1,2,3)))\n",
+    "print(d.fromkeys((1,2,3),\"number\"))\n",
+    "print(d.fromkeys((1,2,3),(\"one\",\"two\",\"three\")))#容易记错\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "{'tom': 90, 'kate': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# （2）删除\n",
+    "# pop :删除指定的键值对，同时会返回该键绑定的值\n",
+    "s1={\"tom\":90,\"jerry\":60,\"kate\":50}\n",
+    "print(s1.pop(\"jerry\"))\n",
+    "print(s1)\n",
+    "# print(s1.pop(\"aa\"))  # 如果键不存在，会报错\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n",
+      "90\n",
+      "None\n",
+      "没有这个key！！\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "# （3）获取\n",
+    "# get(key)\n",
+    "s1={\"tom\":90,\"jerry\":60,\"kate\":50}\n",
+    "print(s1.get(\"tom\"))\n",
+    "print(s1[\"tom\"])\n",
+    "print(s1.get(\"aa\")) # 跟字典[key]方式比起来，\n",
+    "# get方法如果key不存在，不会报错，返回None\n",
+    "# 使用print的时候，可以指定错误信息\n",
+    "# 第一个参数是要查找的key，第二个参数：如果key不存在会返回的值\n",
+    "print(s1.get(\"aa\",\"没有这个key！！\"))\n",
+    "print(s1.get(\"tom\",\"没有这个key！！\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['tom', 'jerry', 'kate'])\n",
+      "tom\n",
+      "jerry\n",
+      "kate\n",
+      "dict_values([90, 60, 50])\n",
+      "90\n",
+      "60\n",
+      "50\n",
+      "dict_items([('tom', 90), ('jerry', 60), ('kate', 50)])\n",
+      "tom 90\n",
+      "jerry 60\n",
+      "kate 50\n",
+      "('tom', 90)\n",
+      "('jerry', 60)\n",
+      "('kate', 50)\n",
+      "90 tom\n",
+      "60 jerry\n",
+      "50 kate\n",
+      "tom 90\n",
+      "jerry 60\n",
+      "kate 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. 字典的遍历\n",
+    "s1={\"tom\":90,\"jerry\":60,\"kate\":50}\n",
+    "# （1）返回所有的键\n",
+    "print(s1.keys())\n",
+    "for i in s1.keys():\n",
+    "    print(i)\n",
+    "#（2）返回所有的值\n",
+    "print(s1.values())\n",
+    "for i in s1.values():\n",
+    "    print(i)\n",
+    "\n",
+    "# (3)返回所有的键值对\n",
+    "print(s1.items())\n",
+    "for k,v in s1.items():\n",
+    "    print(k,v)\n",
+    "for k in s1.items():\n",
+    "    print(k)\n",
+    "for t in s1.items():\n",
+    "    # print(t[0],t[1])\n",
+    "    print(t[1],t[0])\n",
+    "for t in s1.keys():\n",
+    "    print(t,s1[t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
