commit before sleep

--- a/learn_data_analysis/python_1_2.ipynb
+++ b/learn_data_analysis/python_1_2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# python_1\n",
-    "## day_3 and day_4"
+    "## day_3 and day_4/5/6/7"
    ]
   },
   {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1039,12 +1039,115 @@
    "source": [
     "import copy\n",
     "d={1:\"a\",2:\"b\",3:\"c\",4:[1,2]}\n",
-    "d1=copy.copy(d)\n",
+    "d1=copy.copy(d) #只copy第一层\n",
     "d2=copy.deepcopy(d) #deepcopy是全都自己建一个新的\n",
     "d[1]=\"a_new\"\n",
     "d[4][0]=\"1_new\"\n",
     "#print(id(d),id(d1),id(d2))\n",
     "print(d,d1,d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4433544808 4433546824 4433547048\n",
+      "{2, 3} {1, 2, 3} {1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s={1,2,3}\n",
+    "s1=copy.copy(s) #全是新建的\n",
+    "s2=copy.deepcopy(s) #是新建的，和列表一样\n",
+    "s.remove(1)\n",
+    "print(id(s),id(s1),id(s2))\n",
+    "print(s,s1,s2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=1,b=2,c=3,args=(4,),kwargs={'d': 99, 'e': 98, 'f': 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f1(a,b,c=0,*args,**kwargs):\n",
+    "    print(\"a={},b={},c={},args={},kwargs={}\".format(a,b,c,args,kwargs))\n",
+    "def f2(a,b,c=0,*,d,**kwargs):\n",
+    "    print(\"a={},b={},c={},d={},kwargs={}\".format(a,b,c,d,kwargs))\n",
+    "args=(1,2,3,4)\n",
+    "kwargs={\"d\":99,\"e\":98,\"f\":97}\n",
+    "f1(* args,**kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "在myfun的函数中a= 5\n",
+      "在主程序中a= 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfun(a):\n",
+    "    a=a+2\n",
+    "    print(\"在myfun的函数中a=\",a)\n",
+    "\n",
+    "a=3\n",
+    "myfun(a)\n",
+    "print(\"在主程序中a=\",a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2 问题一\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.访问原则\n",
+    "\"\"\"\n",
+    "（1）定义一个全局变量，再定义一个函数，在函数中去修改全局变量\n",
+    "（2）定义一个函数，在函数内部，输出变量，再修改变量的值\n",
+    "（3）定义一个函数，在函数内将全局变量的值+1\n",
+    "（4）定义一个变量id，使用id函数\n",
+    "\"\"\"\n",
+    "# 问题一\n",
+    "x=1\n",
+    "def fun():\n",
+    "    # 解决，需要加global\n",
+    "    global x\n",
+    "    x=2\n",
+    "    print(x)\n",
+    "fun()\n",
+    "print(x,\"问题一\")"
    ]
   },
   {
